--- a/explore.html
+++ b/explore.html
@@ -106,8 +106,8 @@
                                 - No Operation System
                             </p>
                             <div style="display: flex; justify-content: left; align-items: center;">
-                                <h6><del><emphasis>$1440</emphasis></del></h6>
-                                <h4 class="ps-2 text-primary"><strong>$1225</emphasis></strong></h4>
+                                <h6 class="price-slashed" data-price="1440"><del><emphasis>$1440</emphasis></del></h6>
+                                <h4 class="ps-2 text-primary price" data-price="1225"><strong>$1225</strong></h4>
                             </div>
                             <a href="#" class="btn btn-primary product-card-btn">Add to Cart</a>
                             <a href="configuration/rapid.html" class="btn btn-secondary product-card-btn">Customise</a>
@@ -136,8 +136,8 @@
                                 - No Operation System
                             </p>
                             <div style="display: flex; justify-content: left; align-items: center;">
-                                <h6><del><emphasis>$1520</emphasis></del></h6>
-                                <h4 class="ps-2 text-primary"><strong>$1310</emphasis></strong></h4>
+                                <h6 class="price-slashed" data-price="1520"><del><emphasis>$1520</emphasis></del></h6>
+                                <h4 class="ps-2 text-primary price" data-price="1310"><strong>$1310</emphasis></strong></h4>
                             </div>
                             <a href="#" class="btn btn-primary product-card-btn">Add to Cart</a>
                             <a href="#" class="btn btn-secondary product-card-btn">Customise</a>
@@ -168,7 +168,7 @@
                                 - No Operation System
                             </p>
                             <div style="display: flex; justify-content: left; align-items: center;">
-                                <h4 class="text-primary"><strong>$1315</emphasis></strong></h4>
+                                <h4 class="text-primary price" data-price="1315"><strong>$1315</emphasis></strong></h4>
                             </div>
                             <a href="#" class="btn btn-primary product-card-btn">Add to Cart</a>
                             <a href="#" class="btn btn-secondary product-card-btn">Customise</a>
@@ -197,8 +197,8 @@
                                 - No Operation System
                             </p>
                             <div style="display: flex; justify-content: left; align-items: center;">
-                                <h6><del><emphasis>$1780</emphasis></del></h6>
-                                <h4 class="ps-2 text-primary"><strong>$1500</emphasis></strong></h4>
+                                <h6 class="price-slashed" data-price="1780"><del><emphasis>$1780</emphasis></del></h6>
+                                <h4 class="ps-2 text-primary price" data-price="1500"><strong>$1500</emphasis></strong></h4>
                             </div>
                             <a href="#" class="btn btn-primary product-card-btn">Add to Cart</a>
                             <a href="#" class="btn btn-secondary product-card-btn">Customise</a>
@@ -237,8 +237,8 @@
                                 - 1.99 KG
                             </p>
                             <div style="display: flex; justify-content: left; align-items: center;">
-                                <h6><del><emphasis>$1580</emphasis></del></h6>
-                                <h4 class="ps-2 text-primary"><strong>$1425</emphasis></strong></h4>
+                                <h6 class="price-slashed" data-price="1580"><del><emphasis>1580</emphasis></del></h6>
+                                <h4 class="ps-2 text-primary price" data-price="1425"><strong>$1425</emphasis></strong></h4>
                             </div>
                             <a href="#" class="btn btn-primary product-card-btn">Add to Cart</a>
                             <a href="configuration/forge15s.html"class="btn btn-secondary product-card-btn">Customise</a>
@@ -265,7 +265,7 @@
                                 - 2.59 KG <br> <br> <br>
                             </p>
                             <div style="display: flex; justify-content: left; align-items: center;">
-                                <h4 class="text-primary"><strong>$1950</emphasis></strong></h4>
+                                <h4 class="text-primary price" data-price="1950"><strong>$1950</emphasis></strong></h4>
                             </div>
                             <a href="#" class="btn btn-primary product-card-btn">Add to Cart</a>
                             <a href="#" class="btn btn-secondary product-card-btn">Customise</a>
@@ -293,8 +293,8 @@
                                 - 1.94 KG
                             </p>
                             <div style="display: flex; justify-content: left; align-items: center;">
-                                <h6><del><emphasis>$2450</emphasis></del></h6>
-                                <h4 class="ps-2 text-primary"><strong>$2275</emphasis></strong></h4>
+                                <h6 class="price-slashed" data-price="2450"><del><emphasis>$2450</emphasis></del></h6>
+                                <h4 class="ps-2 text-primary price" data-price="2275"><strong>$2275</emphasis></strong></h4>
                             </div>
                             <a href="#" class="btn btn-primary product-card-btn">Add to Cart</a>
                             <a href="#" class="btn btn-secondary product-card-btn">Customise</a>
@@ -320,8 +320,8 @@
                                 - 1.05 KG <br> <br>
                             </p>
                             <div style="display: flex; justify-content: left; align-items: center;">
-                                <h6><del><emphasis>$1690</emphasis></del></h6>
-                                <h4 class="ps-2 text-primary"><strong>$1500</emphasis></strong></h4>
+                                <h6 class="price-slashed" data-price="1690"><del><emphasis>$1690</emphasis></del></h6>
+                                <h4 class="ps-2 text-primary price" data-price="1500"><strong>$1500</emphasis></strong></h4>
                             </div>
                             <a href="#" class="btn btn-primary product-card-btn">Add to Cart</a>
                             <a href="#" class="btn btn-secondary product-card-btn">Customise</a>
@@ -577,5 +577,6 @@
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/script.js"></script>
+    <script src="js/currency-converter.js"></script>
 </body>
 </html>
