changes to cart, currency converter & other minor modifications.

--- a/index.html
+++ b/index.html
@@ -312,8 +312,8 @@
         <p class="text-center mx-4 mx-lg-0">Subscribe to our newsletter to never miss our latest updates, product discounts and more!</p>
         <!-- Subscription Box -->
         <div class="mb-5 mailing-list-input d-block mx-auto">
-            <div class="input-group"> 
-                <input type="email" class="form-control" placeholder="Enter your email">
+            <div class="input-group">
+                <input input="" type="email" class="form-control" placeholder="Enter your email">
                 <span class="input-group-btn"> 
                     <button class="mailing-btn" type="submit" style="border-radius: 5%">Subscribe Now</button> 
                 </span>
