--- a/cart.html
+++ b/cart.html
@@ -74,7 +74,7 @@
                     </div>
                     <div class="d-flex justify-content-between px-0">
                         <p class="ps-0">Delivery</p>
-                        <p id="cart-subtotal" class="text-primary pe-0">Calculated at next step.</p>
+                        <p id="cart-delivery" class="text-primary pe-0">Calculated at next step</p>
                     </div>
                     <div class="d-flex justify-content-between px-0 border-top border-bottom mb-3">
                         <p class="ps-0 my-auto"><strong>Total (includes GST)</strong></p>
@@ -85,9 +85,9 @@
                             <input id="promo-code" type="text" class="form-control" placeholder="Enter Your Promo Code">
                         </div>
                     </form>
-                    <button class="btn btn-primary text-center mt-3">
+                    <button id="check-out" class="btn btn-primary text-center mt-3">
                         <div class="d-flex justify-content-between px-0">
-                            <p id="check-out" class="ps-0 my-auto"><strong>Check Out</strong></p>
+                            <p class="ps-0 my-auto"><strong>Check Out</strong></p>
                             <img src="assets/img/cart/check-out-arrow.svg" width="25px" style="filter: invert(100%);">
                         </div>
                     </button>
