changes to locale (en-US) to enable SGD for Singapore. other minor modifications.

--- a/configuration/rapid.html
+++ b/configuration/rapid.html
@@ -10,7 +10,7 @@
     <title>RAPID - Make It Your Own</title>
 
     <!-- FAVICON -->
-    <link rel="icon" type="image/x-icon" href="assets/favicon/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="../assets/favicon/favicon.ico">
 
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
