--- a/index.html
+++ b/index.html
@@ -318,6 +318,8 @@
                     <button class="mailing-btn" type="submit" style="border-radius: 5%">Subscribe Now</button> 
                 </span>
             </div>
+            <div class="mt-2" id="newsletter-error"></div>
+
         </div>
     </div>
     <!-- MAILING LIST: END -->
