--- a/support.html
+++ b/support.html
@@ -184,8 +184,8 @@
         <!-- FAQ: END -->
         <!-- CONTACT FORM: START -->
         <p class="text-center mt-3">Can't find your answers? Contact Us.</p>
-        <!-- CONTACT FORM: START -->
-	<div class="contact-us d-block px-4 px-lg-0 mx-0 mx-lg-auto mb-5">
+    <!-- CONTACT FORM: START -->
+    <div class="contact-us d-block px-4 px-lg-0 mx-0 mx-lg-auto mb-5">
         <div class="contact-us-container text-white">
             <div class="screen">
                 <div class="screen-header">
@@ -232,7 +232,7 @@
                                 <!-- Form Buttons -->
                                 <div class="app-form-group buttons">
                                     <button id="contact-cancel" class="app-form-button text-uppercase" type="reset">Cancel</button>
-                                    <button id="contact-send" class="app-form-button text-uppercase" type="submit">Send</button>
+                                    <button type="submit" class="app-form-button text-uppercase" id="contact-send">Send</button>
                                 </div>
                             </div>
                         </form>
@@ -242,8 +242,8 @@
         </div>
     </div>
     <!-- CONTACT FORM: END -->
-        <!-- CONTACT FORM: END -->
-        <!-- FOOTER: START -->
+
+    <!-- FOOTER: START -->
     <footer class="bg-dark text-white pt-5 pb-4 mt-auto">
         <div class="container text-md-start">
             <div class="row text-md-start">
@@ -469,5 +469,6 @@
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/script.js"></script>
+    <script src="js/contact.js"></script>
 </body>
 </html>
