--- a/cart.html
+++ b/cart.html
@@ -92,6 +92,10 @@
                         </div>
                     </button>
                 </div>
+                <div id="errorMessage" class="mt-5"></div>
+                <div id="spinner" class="spinner-border mt-5 mb-3" role="status" style="display: none;">
+                    <span class="visually-hidden">Loading...</span>
+                </div>
             </div>
         </div>
     </div>
