--- a/checkout.html
+++ b/checkout.html
@@ -248,15 +248,14 @@
                     <p class="ps-0">Delivery</p>
                     <p id="checkout-delivery" class="text-primary pe-0">$0.00</p>
                 </div>
+                <div  class="d-flex justify-content-between px-0">
+                    <p id="promo-name" class="ps-0 promos" style="display: none;">Discount</p>
+                    <p id="checkout-discount" class="text-primary pe-0 promos" style="display: none;">$0.00</p>
+                </div>
                 <div class="d-flex justify-content-between px-0 border-top border-bottom mb-3">
                     <p class="ps-0 my-auto"><strong>Total (includes GST)</strong></p>
                     <p id="checkout-total" class="text-primary my-auto pe-0 py-3">$0.00</p>
                 </div>
-                <form class="px-0">
-                    <div class="form-group px-0">
-                        <input id="promo-code" type="text" class="form-control" placeholder="Enter Your Promo Code">
-                    </div>
-                </form>
                 <button id="complete-order" class="btn btn-primary text-center mt-3">
                     <div class="d-flex justify-content-between px-0">
                         <p class="ps-0 my-auto"><strong>Complete Order</strong></p>
