--- a/explore.html
+++ b/explore.html
@@ -109,7 +109,7 @@
                                 <h6 class="price-slashed" data-price="1440"><del><emphasis>$1440</emphasis></del></h6>
                                 <h4 class="ps-2 text-primary price" data-price="1225"><strong>$1225</strong></h4>
                             </div>
-                            <a href="#" class="btn btn-primary product-card-btn">Add to Cart</a>
+                            <a id="rapidATC" class="btn btn-primary product-card-btn">Add to Cart</a>
                             <a href="configuration/rapid.html" class="btn btn-secondary product-card-btn">Customise</a>
                         </div>
                     </div>
@@ -240,7 +240,7 @@
                                 <h6 class="price-slashed" data-price="1580"><del><emphasis>1580</emphasis></del></h6>
                                 <h4 class="ps-2 text-primary price" data-price="1425"><strong>$1425</emphasis></strong></h4>
                             </div>
-                            <a href="#" class="btn btn-primary product-card-btn">Add to Cart</a>
+                            <a id="forge15sATC" class="btn btn-primary product-card-btn">Add to Cart</a>
                             <a href="configuration/forge15s.html" class="btn btn-secondary product-card-btn">Customise</a>
                         </div>
                     </div>
@@ -578,5 +578,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/script.js"></script>
     <script src="js/currency-converter.js"></script>
+    <script src="js/explore.js"></script>
 </body>
 </html>
