--- a/register.html
+++ b/register.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <!-- TITLE -->
-    <title>COMZONE - Singapore's #1 Customisable High Performance PC Builders</title>
+    <title>COMZONE - Register</title>
 
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
