--- a/support.html
+++ b/support.html
@@ -3,7 +3,7 @@
 <head>
     <!-- META -->
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <!-- TITLE -->
@@ -243,6 +243,23 @@
     </div>
     <!-- CONTACT FORM: END -->
 
+    <!-- CHOOSE COUNTRY MODAL: START -->
+    <div class="modal fade" id="defaultModal" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body"></div>
+                <!-- Close Button -->
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- CHOOSE COUNTRY MODAL: END -->
+
     <!-- FOOTER: START -->
     <footer class="bg-dark text-white pt-5 pb-4 mt-auto">
         <div class="container text-md-start">
@@ -254,15 +271,15 @@
                     <!-- Company Description -->
                     <p>Singapore's #1 Customisable High Performance PC Builders.</p>
                     <!-- Company Awards -->
-                    <img class="me-4" height="80px" width="80px" src="assets/img/index/best-badge.png" alt="Best Badge Icon">
-                    <img height="80px" width="80px" src="assets/img/index/certified-badge.png" alt="Certified Browser Icon">
+                    <img class="me-4" height="80" width="80" src="assets/img/index/best-badge.png" alt="Best Badge Icon">
+                    <img height="80" width="80" src="assets/img/index/certified-badge.png" alt="Certified Browser Icon">
                     <!-- Choose Country Button -->
-                    <div class="mb-3" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;" type="button" data-bs-toggle="modal" data-bs-target=".bd-example-modal-xl">
-                        <img src="assets/img/index/location.png" width="20px" height="20px" style="filter: invert(100%);">
-                        <p class="ps-1 text-white my-auto">Singapore</p>
+                    <div class="mb-3" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;" role="button" data-bs-toggle="modal" data-bs-target=".bd-example-modal-xl">
+                        <img src="assets/img/index/location.png" width="20" height="20" style="filter: invert(100%)" alt="Location Icon">
+                        <p id="current-country" class="ps-1 text-white my-auto"></p>
                     </div>
                     <!-- Choose Country Modal -->
-                    <div class="modal fade bd-example-modal-xl" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+                    <div class="modal fade bd-example-modal-xl" tabindex="-1" role="dialog" aria-hidden="true">
                         <div class="modal-dialog modal-xl">
                             <div class="modal-content px-5">
                                 <!-- Header -->
@@ -270,27 +287,27 @@
                                 <div class="mx-5">
                                     <!-- Asia Pacific -->
                                     <h4 class="text-left text-dark choose-region" style="padding-left: 20px">Asia Pacific</h4>
-                                    <div class="container">
+                                    <div class="container country-apac">
                                         <!-- Row One -->
                                         <div class="row mb-0 mb-lg-3">
                                             <!-- Australia -->
                                             <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
-                                                <img src="assets/img/index/location.png" width="20px" height="20px" class="ms-4 ms-lg-0">
+                                                <img src="assets/img/index/location.png" width="20" height="20" class="ms-4 ms-lg-0" alt="Location Icon">
                                                 <p class="ps-2 pe-2 text-dark my-auto">Australia</p>
                                             </div>
                                             <!-- China -->
                                             <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
-                                                <img src="assets/img/index/location.png" width="20px" height="20px" class="ms-4 ms-lg-0">
+                                                <img src="assets/img/index/location.png" width="20" height="20" class="ms-4 ms-lg-0" alt="Location Icon">
                                                 <p class="ps-2 pe-2 text-dark my-auto">China</p>
                                             </div>
                                             <!-- Hong Kong -->
                                             <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
-                                                <img src="assets/img/index/location.png" width="20px" height="20px" class="ms-4 ms-lg-0">
+                                                <img src="assets/img/index/location.png" width="20" height="20" class="ms-4 ms-lg-0" alt="Location Icon">
                                                 <p class="ps-2 pe-2 text-dark my-auto">Hong Kong</p>
                                             </div>
                                             <!-- India -->
                                             <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
-                                                <img src="assets/img/index/location.png" width="20px" height="20px" class="ms-4 ms-lg-0">
+                                                <img src="assets/img/index/location.png" width="20" height="20" class="ms-4 ms-lg-0" alt="Location Icon">
                                                 <p class="ps-2 pe-2 text-dark my-auto">India</p>
                                             </div>
                                         </div>
@@ -298,22 +315,22 @@
                                         <div class="row mb-0 mb-lg-3">
                                             <!-- Indonesia -->
                                             <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
-                                                <img src="assets/img/index/location.png" width="20px" height="20px" class="ms-4 ms-lg-0">
+                                                <img src="assets/img/index/location.png" width="20" height="20" class="ms-4 ms-lg-0" alt="Location Icon">
                                                 <p class="ps-2 pe-2 text-dark my-auto">Indonesia</p>
                                             </div>
                                             <!-- Japan -->
                                             <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
-                                                <img src="assets/img/index/location.png" width="20px" height="20px" class="ms-4 ms-lg-0">
+                                                <img src="assets/img/index/location.png" width="20" height="20" class="ms-4 ms-lg-0" alt="Location Icon">
                                                 <p class="ps-2 pe-2 text-dark my-auto">Japan</p>
                                             </div>
                                             <!-- Malaysia -->
                                             <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
-                                                <img src="assets/img/index/location.png" width="20px" height="20px" class="ms-4 ms-lg-0">
+                                                <img src="assets/img/index/location.png" width="20" height="20" class="ms-4 ms-lg-0" alt="Location Icon">
                                                 <p class="ps-2 pe-2 text-dark my-auto">Malaysia</p>
                                             </div>
                                             <!-- New Zealand -->
                                             <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
-                                                <img src="assets/img/index/location.png" width="20px" height="20px" class="ms-4 ms-lg-0">
+                                                <img src="assets/img/index/location.png" width="20" height="20" class="ms-4 ms-lg-0" alt="Location Icon">
                                                 <p class="ps-2 pe-2 text-dark my-auto">New Zealand</p>
                                             </div>
                                         </div>
@@ -321,22 +338,22 @@
                                         <div class="row">
                                             <!-- Philippines -->
                                             <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
-                                                <img src="assets/img/index/location.png" width="20px" height="20px" class="ms-4 ms-lg-0">
+                                                <img src="assets/img/index/location.png" width="20" height="20" class="ms-4 ms-lg-0" alt="Location Icon">
                                                 <p class="ps-2 pe-2 text-dark my-auto">Philippines</p>
                                             </div>
                                             <!-- Korea -->
                                             <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
-                                                <img src="assets/img/index/location.png" width="20px" height="20px" class="ms-4 ms-lg-0">
+                                                <img src="assets/img/index/location.png" width="20" height="20" class="ms-4 ms-lg-0" alt="Location Icon">
                                                 <p class="ps-2 pe-2 text-dark my-auto">Korea</p>
                                             </div>
                                             <!-- Singapore -->
                                             <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
-                                                <img src="assets/img/index/location.png" width="20px" height="20px" class="ms-4 ms-lg-0">
+                                                <img src="assets/img/index/location.png" width="20" height="20" class="ms-4 ms-lg-0" alt="Location Icon">
                                                 <p class="ps-2 pe-2 text-dark my-auto">Singapore</p>
                                             </div>
                                             <!-- Taiwan -->
                                             <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
-                                                <img src="assets/img/index/location.png" width="20px" height="20px" class="ms-4 ms-lg-0">
+                                                <img src="assets/img/index/location.png" width="20" height="20" class="ms-4 ms-lg-0" alt="Location Icon">
                                                 <p class="ps-2 pe-2 text-dark my-auto">Taiwan</p>
                                             </div>
                                         </div>
@@ -345,27 +362,27 @@
                                 <div class="m-5">
                                     <!-- Europe -->
                                     <h4 class="text-left text-dark choose-region" style="padding-left: 20px">Europe</h4>
-                                    <div class="container">
+                                    <div class="container country-europe">
                                         <!-- Row One -->
                                         <div class="row mb-0 mb-lg-3">
                                             <!-- Austria -->
                                             <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
-                                                <img src="assets/img/index/location.png" width="20px" height="20px" class="ms-4 ms-lg-0">
+                                                <img src="assets/img/index/location.png" width="20" height="20" class="ms-4 ms-lg-0" alt="Location Icon">
                                                 <p class="ps-2 pe-2 text-dark my-auto">Austria</p>
                                             </div>
                                             <!-- Belgium-->
                                             <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
-                                                <img src="assets/img/index/location.png" width="20px" height="20px" class="ms-4 ms-lg-0">
+                                                <img src="assets/img/index/location.png" width="20" height="20" class="ms-4 ms-lg-0" alt="Location Icon">
                                                 <p class="ps-2 pe-2 text-dark my-auto">Belgium</p>
                                             </div>
                                             <!-- Finland -->
                                             <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
-                                                <img src="assets/img/index/location.png" width="20px" height="20px" class="ms-4 ms-lg-0">
+                                                <img src="assets/img/index/location.png" width="20" height="20" class="ms-4 ms-lg-0" alt="Location Icon">
                                                 <p class="ps-2 pe-2 text-dark my-auto">Finland</p>
                                             </div>
                                             <!-- France -->
                                             <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
-                                                <img src="assets/img/index/location.png" width="20px" height="20px" class="ms-4 ms-lg-0">
+                                                <img src="assets/img/index/location.png" width="20" height="20" class="ms-4 ms-lg-0" alt="Location Icon">
                                                 <p class="ps-2 pe-2 text-dark my-auto">France</p>
                                             </div>
                                         </div>
@@ -373,22 +390,22 @@
                                         <div class="row mb-0 mb-lg-3">
                                             <!-- Ireland -->
                                             <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
-                                                <img src="assets/img/index/location.png" width="20px" height="20px" class="ms-4 ms-lg-0">
+                                                <img src="assets/img/index/location.png" width="20" height="20" class="ms-4 ms-lg-0" alt="Location Icon">
                                                 <p class="ps-2 pe-2 text-dark my-auto">Ireland</p>
                                             </div>
                                             <!-- Norway -->
                                             <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
-                                                <img src="assets/img/index/location.png" width="20px" height="20px" class="ms-4 ms-lg-0">
+                                                <img src="assets/img/index/location.png" width="20" height="20" class="ms-4 ms-lg-0" alt="Location Icon">
                                                 <p class="ps-2 pe-2 text-dark my-auto">Norway</p>
                                             </div>
                                             <!-- Sweden -->
                                             <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
-                                                <img src="assets/img/index/location.png" width="20px" height="20px" class="ms-4 ms-lg-0">
+                                                <img src="assets/img/index/location.png" width="20" height="20" class="ms-4 ms-lg-0" alt="Location Icon">
                                                 <p class="ps-2 pe-2 text-dark my-auto">Sweden</p>
                                             </div>
                                             <!-- United Kingdom -->
                                             <div class="col" style="display: flex; justify-content: left; align-items: center; margin-top: 16px;">
-                                                <img src="assets/img/index/location.png" width="20px" height="20px" class="ms-4 ms-lg-0">
+                                                <img src="assets/img/index/location.png" width="20" height="20" class="ms-4 ms-lg-0" alt="Location Icon">
                                                 <p class="ps-2 pe-2 text-dark my-auto">United Kingdown</p>
                                             </div>
                                         </div>
@@ -469,6 +486,8 @@
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="js/script.js"></script>
+    <script src="js/newsletter.js"></script>
     <script src="js/contact.js"></script>
 </body>
 </html>
+
